syntax = "proto3";

package envoy.extensions.filters.network.zookeeper_proxy.v3;

import "google/protobuf/wrappers.proto";

import "udpa/annotations/status.proto";
import "udpa/annotations/versioning.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.filters.network.zookeeper_proxy.v3";
option java_outer_classname = "ZookeeperProxyProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/filters/network/zookeeper_proxy/v3;zookeeper_proxyv3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: ZooKeeper proxy]
// ZooKeeper Proxy :ref:`configuration overview <config_network_filters_zookeeper_proxy>`.
// [#extension: envoy.filters.network.zookeeper_proxy]

message ZooKeeperProxy {
  option (udpa.annotations.versioning).previous_message_type =
      "envoy.config.filter.network.zookeeper_proxy.v1alpha1.ZooKeeperProxy";

  // The human readable prefix to use when emitting :ref:`statistics
  // <config_network_filters_zookeeper_proxy_stats>`.
  string stat_prefix = 1 [(validate.rules).string = {min_len: 1}];

  // [#not-implemented-hide:] The optional path to use for writing ZooKeeper access logs.
  // If the access log field is empty, access logs will not be written.
  string access_log = 2;

  // Messages — requests, responses and events — that are bigger than this value will
  // be ignored. If it is not set, the default value is 1Mb.
  //
  // The value here should match the jute.maxbuffer property in your cluster configuration:
  //
  // https://zookeeper.apache.org/doc/r3.4.10/zookeeperAdmin.html#Unsafe+Options
  //
  // if that is set. If it isn't, ZooKeeper's default is also 1Mb.
  google.protobuf.UInt32Value max_packet_bytes = 3;

  // List of latency thresholds for opcodes to decide the fast/slow responses and emit metrics (used for error budget calculation).
  //
  // https://sre.google/workbook/implementing-slos/
  //
  // If no latency threshold is set, the fast/slow response counters will always be 0.
  // If the default threshold is not set, it will be set as 100 millisecond.
  // If the threshold of one opcode is not set, it will fallback to use the default
  // threshold.
  repeated LatencyThreshold latency_thresholds = 4 [(validate.rules).repeated = {max_items: 27}];
}

message LatencyThreshold {
  enum Opcode {
    Default = 0;
    Connect = 1;
    Create = 2;
    Delete = 3;
    Exists = 4;
    GetData = 5;
    SetData = 6;
    GetAcl = 7;
    SetAcl = 8;
    GetChildren = 9;
    Sync = 10;
    Ping = 11;
    GetChildren2 = 12;
    Check = 13;
    Multi = 14;
    Create2 = 15;
    Reconfig = 16;
    CheckWatches = 17;
    RemoveWatches = 18;
    CreateContainer = 19;
    CreateTtl = 20;
    Close = 21;
    SetAuth = 22;
    SetWatches = 23;
    GetEphemerals = 24;
    GetAllChildrenNumber = 25;
    SetWatches2 = 26;
  }

  Opcode opcode = 1 [(validate.rules).enum = {defined_only: true}];

  uint32 threshold = 2 [(validate.rules).uint32 = {gt: 0}];
}
